# login

./: .gitignore  pyproject.toml  requirements.txt
core_login/: admin.py  apps.py  models.py  views.py
core_login/migrations/: 0001_initial.py
login/: settings.py  urls.py
templates/: index.html
